<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="st_SafetyStatus" Id="{4373e17f-1cdb-4cfa-aaf0-e6f86c38e70b}">
    <Declaration><![CDATA[TYPE st_SafetyStatus :
STRUCT
	RawStateCode :USINT;
	RawDiagCode  :USINT;
	State :e_SafetyState;
	Diagnosis : e_SafetyDiag;
	FSoESlaveError : BOOL;
	FSoESlaveFailSafeActive :BOOL;
	StartUp :BOOL;
	FSoEMasterFailSafeActive:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>